fix margin on app wrapper on small screen

--- a/packages/frontend/app/styles/app.scss
+++ b/packages/frontend/app/styles/app.scss
@@ -240,8 +240,12 @@ ul {
 }
 
 .application-wrapper {
-  margin: 1em auto 0;
+  margin: 1em 1em 0;
   max-width: 800px;
+
+  @media (min-width: 768px) {
+    margin: 1em auto 0;
+  }
 }
 
 header {
